# api/src/controllers/submissionData.ts
@@ -1,21 +1,21 @@
 import { Controller, Get, Query, Route, } from 'tsoa';
-import { IGetSubmissionIdsResult, getSubmissionIds, requirePool } from '@game/db';
+import { ISubmissionDataResult, submissionData, requirePool } from '@game/db';
 
-type Response = IGetSubmissionIdsResult[] | Error;
+type Response = ISubmissionDataResult[] | Error;
 
 interface Error {
   error: 'Submissions not found'
 }
 
-@Route('submission_ids')
+@Route('submissions_data')
 export class SubmissionIdsController extends Controller {
   @Get()
   public async get(@Query() wallet_address: string): Promise<Response> {
     const pool = requirePool();
-    const ids = await getSubmissionIds.run(
+    const data = await submissionData.run(
       { wallet_address: wallet_address },
       pool);
-    if (ids.length == 0) return { error: 'Submissions not found' }
-    return ids;
+    if (data.length == 0) return { error: 'Submissions not found' }
+    return data;
   }
 }
